# datediff

./: README.md  pyproject.toml
datediff/: __main__.py  date.py
tests/: test_date.py
