[tool.poetry]
name = "datediff"
version = "0.1.0"
description = "Number of days elapsed between 2 dates."
readme = "README.md"
authors = ["lamcw <thomas@lamcw.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
datediff = 'datediff.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
